added more breakpoints

--- a/index/styles.css
+++ b/index/styles.css
@@ -259,7 +259,7 @@ li.slider {
     font-family: 'Asap' !important;
     font-weight: 900 !important;
     font-size: 4em !important;
-    left:35%;
+    right:5%;
     max-width: 45% !important;
     text-align: center !important;
     position: absolute !important;
