--- a/styles/contact.css
+++ b/styles/contact.css
@@ -9,8 +9,22 @@
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 576px) {
     #contact .content {
         width: 100%;
+    }
+
+}
+@media (max-width: 720px) {
+    .flip-container .flip-text {
+        font-family: 'Asap' !important;
+        font-weight: 900 !important;
+        font-size: 4em !important;
+        left: 5%;
+        max-width: 75% !important;
+        text-align: center !important;
+        position: absolute !important;
+        bottom: 5% !important;
+        top: initial !important; /* Reset the 'top' property */
     }
 }
