--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-@import url('/styles/bootstrap.min.css');
-@import url('/styles/general.css');
-@import url('/styles/header.css');
-@import url('/styles/section.css');
-@import url('/styles/contact.css');
+@import url('styles/bootstrap.min.css');
+@import url('styles/general.css');
+@import url('styles/header.css');
+@import url('styles/section.css');
+@import url('styles/contact.css');
