--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -116,7 +116,7 @@ header {
         }
     }
 
-    a {
+    span {
         display: flex;
         width: 100%;
         height: 100%;
@@ -127,6 +127,10 @@ header {
         position: relative;
         font-size: 1rem;
         z-index: 9;
+
+        @media (max-width: 768px) {
+            color: #151515;
+        }
     }
 
 }
@@ -152,31 +156,23 @@ header {
 }
 
 
-.menu li:nth-child(1):hover ~ .slider,
-.menu li:nth-child(1):focus ~ .slider,
-.menu li:nth-child(1):active ~ .slider {
+.menu li:nth-child(1):hover ~ .slider {
     left: 0;
     background-color: #3498db51;
 }
 
-.menu li:nth-child(2):hover ~ .slider,
-.menu li:nth-child(2):focus ~ .slider,
-.menu li:nth-child(2):active ~ .slider {
+.menu li:nth-child(2):hover ~ .slider {
     left: 25%;
     background-color: #9c59b63c;
 }
 
 
-.menu li:nth-child(3):hover ~ .slider,
-.menu li:nth-child(3):focus ~ .slider,
-.menu li:nth-child(3):active ~ .slider {
+.menu li:nth-child(3):hover ~ .slider {
     left: 50%;
     background-color: #e67d223c;
 }
 
-.menu li:nth-child(4):hover ~ .slider,
-.menu li:nth-child(4):focus ~ .slider,
-.menu li:nth-child(4):active ~ .slider {
+.menu li:nth-child(4):hover ~ .slider {
     left: 75%;
     background-color: #16a0843e;
 }
