--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -90,8 +90,16 @@
 
     .intro-text {
         @include font('text');
-        max-width: max(50vw, 500px);
+        max-width: 50vw;
         padding: 0 0 25px;
+
+        @media (max-width: 1440px) {
+            max-width: 60vw;
+        }
+
+        @media (max-width: 1024px) {
+            max-width: 70vw;
+        }
 
         @media (max-width: 1024px) {
             max-width: unset;
