--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,29 +2,36 @@ $header-height: 110px;
 
 @mixin font($size) {
     @if ($size == 'title') {
-        font-family: sans-serif, 'Open Sans';
-        font-size: 4.8rem;
+        font-family: 'Lato', sans-serif;
+        font-size: 3.5rem;
+        font-weight: 900;
+        letter-spacing: 0.03rem;
         -webkit-text-stroke: 1px #000;
         text-decoration: none;
         color: transparent;
         background-clip: text;
 
         &::selection {
-            color: #3b3b3b;
+            color: transparent;
             background: #aab8c4;
         }
 
     } @else if ($size == 'sub-title') {
-        font-family: 'Asap', 'IBM Plex Mono', 'Lato', 'Nunito', 'Open Sans', 'Quicksand', 'Victor Mono', 'Ysabeau SC', sans-serif;
+        font-family: 'Asap', 'Lato', sans-serif;
         font-weight: 900;
-        font-size: 4rem;
+        font-size: 1.3rem;
+        letter-spacing: 0.03rem;
         line-height: 1;
         color: #474747;
 
     } @else if ($size == 'text') {
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Lato', sans-serif;
+        font-weight: 400;
         color: #242424;
 
+    } @else if ($size == 'action-button') {
+        font-family: 'Asap', sans-serif;
+        font-weight: 400;
         font-size: 1rem;
     }
 }
