--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -5,7 +5,6 @@ body, html {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background: radial-gradient(circle at top left, rgb(254, 254, 246), rgb(116, 115, 108)), radial-gradient(circle at bottom right, #4B4B4Bff, #181818ff);
     background-blend-mode: screen;
     background-repeat: no-repeat;
@@ -71,18 +70,37 @@ p, .text {
 }
 
 .btn-action {
-    background-color: #25b9b9;
+    background-color: #3498db51;
     padding: 10px 32px;
     margin-top: 20px;
     margin-bottom: 30px;
     min-width: 200px;
-    color: #ffffff;
+    color: #1e1e1e;
     border-radius: 0.7rem;
     cursor: pointer;
     @include font('action-button');
 
     &:hover, &:focus, &:active {
-        background-color: #1f8383;
+        background-color: rgba(37, 185, 185, 0.63);
         color: #ffffff;
+    }
+}
+
+footer {
+    height: $footer-height;
+    //text-align: right;
+    padding: 0 50px;
+
+    @media (max-width: 768px) {
+        padding: 0 20px;
+    }
+
+    @media (max-width: 425px) {
+        padding: 0 10px;
+    }
+
+    p {
+        color: #343434;
+        font-size: 0.9rem;
     }
 }
