--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -47,7 +47,7 @@ p, .text {
     //}
 }
 
-#main {
+#main, footer {
     position: relative;
     z-index: 1;
 }
@@ -84,6 +84,11 @@ p, .text {
         background-color: rgba(37, 185, 185, 0.63);
         color: #ffffff;
     }
+
+    @media (max-width: 425px) {
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
 }
 
 footer {
@@ -100,7 +105,7 @@ footer {
     }
 
     p {
-        color: #343434;
+        color: rgba(56, 56, 56, 0.86);
         font-size: 0.9rem;
     }
 }
