--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -48,6 +48,12 @@ p, .text {
     //}
 }
 
+.flip-title {
+    @include font('sub-title');
+    font-size: 3.9rem;
+
+}
+
 #main, footer {
     position: relative;
     z-index: 1;
