--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -110,3 +110,12 @@
     }
 
 }
+
+.flip-container {
+    > * {
+        display: none;
+    }
+    > .active {
+        display: initial;
+    }
+}
