--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -42,6 +42,35 @@
         display: none;
         @include font('text');
         margin: 1rem 0;
+
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight: bold;
+        padding: 10px 20px;
+        color: white;
+        border-radius: 5px;
+
+        > div {
+            display: flex;
+            gap: 10px;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        #closeButton {
+            cursor: pointer;
+            background-color: #fff;
+            color: #2a2a2a;
+            border: none;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            text-align: center;
+            line-height: 18px;
+            margin: 0;
+        }
     }
 }
 
