--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -44,6 +44,7 @@
         margin: 1rem 0;
 
         position: fixed;
+        z-index: 100000;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -51,6 +52,10 @@
         padding: 10px 20px;
         color: white;
         border-radius: 5px;
+
+        @media (max-width: 768px) {
+            width: 90%;
+        }
 
         > div {
             display: flex;
