--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,8 +7,9 @@ $colors: #3498db51, #9c59b63c, #e67d223c, #16a0843e, rgba(39, 169, 50, 0.32);
 
 @mixin font($size) {
     @if ($size == 'title') {
-        font-size: 3.5rem;
-        font-weight: 400;
+        font-family: 'Dosis', sans-serif;
+        font-size: 4.5rem;
+        font-weight: 700;
         letter-spacing: 0.03rem;
         -webkit-text-stroke: 1px #000;
         text-decoration: none;
@@ -21,14 +22,13 @@ $colors: #3498db51, #9c59b63c, #e67d223c, #16a0843e, rgba(39, 169, 50, 0.32);
         }
 
         @media (max-width: 425px) {
-            font-size: 2.5rem;
+            font-size: 3.5rem;
         }
 
     } @else if ($size == 'sub-title') {
         font-weight: 900;
         font-size: 1.3rem;
         letter-spacing: 0.03rem;
-        line-height: 1;
         color: #474747;
 
     } @else if ($size == 'text') {
