--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,9 +7,8 @@ $colors: #3498db51, #9c59b63c, #e67d223c, #16a0843e, rgba(39, 169, 50, 0.32);
 
 @mixin font($size) {
     @if ($size == 'title') {
-        font-family: 'Dosis', sans-serif;
-        font-size: 4.5rem;
-        font-weight: 700;
+        font-size: 4rem;
+        font-weight: 400;
         letter-spacing: 0.03rem;
         -webkit-text-stroke: 1px #000;
         text-decoration: none;
@@ -22,7 +21,7 @@ $colors: #3498db51, #9c59b63c, #e67d223c, #16a0843e, rgba(39, 169, 50, 0.32);
         }
 
         @media (max-width: 425px) {
-            font-size: 3.5rem;
+            font-size: 3rem;
         }
 
     } @else if ($size == 'sub-title') {
@@ -30,6 +29,16 @@ $colors: #3498db51, #9c59b63c, #e67d223c, #16a0843e, rgba(39, 169, 50, 0.32);
         font-size: 1.3rem;
         letter-spacing: 0.03rem;
         color: #474747;
+
+    } @else if ($size == 'bullet-animation') {
+        font-family: 'Dosis', sans-serif;
+        font-size: 3.9rem;
+        font-weight: 700;
+        color: #474747;
+
+        @media (max-width: 425px) {
+            font-size: 2.9rem;
+        }
 
     } @else if ($size == 'text') {
         font-weight: 400;
