--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -49,9 +49,7 @@ p, .text {
 }
 
 .flip-title {
-    @include font('sub-title');
-    font-size: 3.9rem;
-    line-height: normal;
+    @include font('bullet-animation');
 }
 
 #main, footer {
