--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -41,6 +41,7 @@
     #form-result {
         display: none;
         @include font('text');
+        font-size: 1.2rem;
         margin: 1rem 0;
 
         position: fixed;
@@ -55,6 +56,11 @@
 
         @media (max-width: 768px) {
             width: 90%;
+            font-size: 1.1rem;
+        }
+
+        &.bg-success {
+            background: #66bb6a !important;
         }
 
         > div {
