--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -53,6 +53,7 @@
         padding: 10px 20px;
         color: white;
         border-radius: 5px;
+        box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.12), 0 10px 36px -4px rgba(68, 68, 68, 0.3);
 
         @media (max-width: 768px) {
             width: 90%;
