--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -57,7 +57,6 @@
 
         @media (max-width: 768px) {
             width: 90%;
-            font-size: 1.1rem;
         }
 
         &.bg-success {
@@ -67,6 +66,7 @@
         > div {
             display: flex;
             gap: 10px;
+            min-height: 50px;
             flex-direction: row;
             align-items: center;
         }
@@ -81,7 +81,7 @@
             height: 20px;
             text-align: center;
             line-height: 18px;
-            margin: 0;
+            margin: 0 0 0 auto;
         }
     }
 }
