--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,7 +5,7 @@ header {
     display: flex;
     align-items: center;
 
-    @media (max-width: 650px) {
+    @media (max-width: 950px) {
         flex-direction: column;
         align-items: center;
     }
@@ -45,7 +45,7 @@ header {
 .menu {
     list-style: none;
     padding: 0;
-    width: min(60%, 500px);
+    width: min(60%, 650px);
     height: 40px;
     background-color: rgba(165, 169, 172, 0);
     position: relative;
@@ -57,13 +57,14 @@ header {
     justify-content: center;
     align-items: center;
 
-    @media (max-width: 768px) {
-        width: min(60%, 500px);
-    }
+    //@media (max-width: 950px) {
+    //    width: min(60%, 500px);
+    //}
 
-    @media (max-width: 650px) {
-        width: min(98%, 400px);
+    @media (max-width: 950px) {
+        width: min(98%, 600px);
         height: 30px;
+        min-height: 30px;
         margin: 0 auto;
         float: none;
     }
@@ -103,6 +104,11 @@ header {
         white-space: nowrap;
         z-index: 9;
 
+        > a {
+            text-decoration: none;
+            color: inherit;;
+        }
+
         @media (max-width: 768px) {
             color: #151515;
             font-size: 13px;
@@ -119,9 +125,13 @@ header {
 
 @for $i from 1 through $item-count {
     $color: nth($colors, $i);
-    .menu li:nth-child(#{$i}).active ~ .slider,
-    .menu li:nth-child(#{$i}):hover ~ .slider {
+    .menu li:nth-child(#{$i}).active ~ .slider {
         left: $width * ($i - 1);
         background-color: $color;
+    }
+
+    .menu li:nth-child(#{$i}):hover ~ .slider {
+        left: $width * ($i - 1) !important;
+        background-color: $color !important;
     }
 }
