--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -138,21 +138,13 @@ header {
 
 /* mobile-L */
 @media (max-width: 576px) {
-//    $colors: rgba(0, 199, 217, 0.47),
-//    #3498db51,
-//    #9c59b63c,
-//    #e67d223c,
-//    #16a0843e,
-//    rgba(39, 169, 50, 0.32),
-//    // rgba(232, 195, 74, 0.65) // ignore demo color since hidden
-//;
     $item-count: 6;
     $width: calc(100% / $item-count);
 
     #demo-link {
         display: none;
     }
-    .menu li, .menu .slider {
+    .menu li, .menu li.slider {
         width: $width;
     }
 
