--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,16 @@
 $header-height: 100px;
 $footer-height: 30px;
 
-$item-count: 7;
+$item-count: 6;
 $width: calc(100% / $item-count);
-$colors: rgba(0, 199, 217, 0.47),
-#3498db51,
-#9c59b63c,
-#e67d223c,
-#16a0843e,
-rgba(39, 169, 50, 0.32),
-rgba(232, 195, 74, 0.65);
+$colors: //
+    //rgba(0, 199, 217, 0.47),
+        #3498db51,
+        #9c59b63c,
+        #e67d223c,
+        #16a0843e,
+        rgba(39, 169, 50, 0.32),
+        rgba(232, 195, 74, 0.65);
 
 @mixin font($size) {
     @if ($size == 'title') {
